# multimodal-rag-with-ollama-and-qdrant

./: .gitignore  README.md  app.py  main.py  pyproject.toml
src/: document_processor.py  endpoint.py  qdrant_index.py  simple_rag.py  text_embedder.py  utils.py
